ChangeLog for PyLint
====================
	
--
    * fix #8687, W0613 false positive on inner function
    * fix #8332: set E0501 line no to the first line where non ascii character
      has been found
    * implements #4037: don't issue W0142 (* or ** magic) when they are barely
      passed from */** arguments
 
2009-03-19 -- 0.17.0
    * semicolon check : move W0601 to W0301
    * remove rpython : remove all rpython checker, modules and tests
    * astng 0.18 compatibility: support for _ast module modifies interfaces

2009-01-28 -- 0.16.0
    * change [en|dis]able-msg-cat options: only accept message categories
      identified by their first letter (eg IRCWEF) without the need for comma
      as separator
    * add epylint.bat script to fix Windows installation
    * setuptools/easy_install support
    * include a modified version of Maarten ter Huurne patch to avoid W0613
      warning on arguments from overridden method
    * implement #5575  drop dumb W0704 message) by adding W0704 to ignored
      messages by default
    * new W0108 message, checking for suspicious lambda (provided by  Nathaniel
      Manista)
    * fix W0631, false positive reported by Paul Hachmann
    * fix #6951: false positive with W0104
    * fix #6949
    * patches by Mads Kiilerich:
	* implement #4691, make pylint exits with a non zero return
	  status if any messages other then Information are issued
	* fix #3711, #5626 (name resolution bug w/ decorator and class members)
	* fix #6954

2008-10-13  --  0.15.2
    * fix #5672: W0706 weirdness ( W0706 removed )
    * fix #5998: documentation points to wrong url for mailing list
    * fix #6022: no error message on wrong module names
    * fix #6040: pytest doesn't run test/func_test.py

2008-09-15  --  0.15.1
    * fix #4910: default values are missing in manpage
    * fix #5991: missing files in 0.15.0 tarball
    * fix #5993: epylint should work with python 2.3

2008-09-10  --  0.15.0